--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@eo-locale/preact": "^1.7.2",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "preact": "^10.18.1"
   }
