--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "@blockcode/core",
-  "module": "dist/index.js",
+  "private": "true",
+  "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "build": "bun-build",
-    "dev": "bun-build --watch ./src"
-  },
-  "devDependencies": {
-    "bun-types": "latest",
-    "bun-build": "github:kankungyip/bun-build",
-    "bun-loader-css": "github:kankungyip/bun-loader-css"
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    },
+    "./io": {
+      "import": "./dist/io.js"
+    },
+    "./ui": {
+      "import": "./dist/ui.js"
+    }
   },
   "dependencies": {
     "@eo-locale/preact": "^1.7.2",
-    "jszip": "^3.10.1",
-    "mime": "^4.0.4",
-    "localforage": "^1.10.0",
-    "preact": "^10.18.1"
+    "@popperjs/core": "^2.11.8",
+    "@preact/signals": "^1.3.0",
+    "preact": "^10.25.0"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 }
